# QA-trainee-assignment

./: Readme.md  TESTCASES.md  Task1.md  bugs.md  conftest.py  pyproject.toml  test_api.py
